[package]
name = "counter"
version = "0.1.0"
authors = ["Liam Curry <liam@sagan.software>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
stage0 = { path = "../../" }
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
    'Attr',
    'console',
    'Document',
    'DocumentFragment',
    'Element',
    'Event',
    'EventTarget',
    'HtmlElement',
    'HtmlTemplateElement',
    'NodeFilter',
    'NamedNodeMap',
    'Node',
    'Text',
    'TreeWalker',
    'Window',
]