[package]
name = "todomvc"
version = "0.1.0"
authors = ["Liam Curry <liam@sagan.software>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
stage0 = { path = "../../" }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
console_error_panic_hook = { version = "0.1.1" }


[dependencies.web-sys]
version = "0.3"
features = [
    'Attr',
    'console',
    'CssStyleDeclaration',
    'Document',
    'DocumentFragment',
    'Element',
    'Event',
    'EventTarget',
    'HtmlElement',
    'HtmlInputElement',
    'HtmlTemplateElement',
    'KeyboardEvent',
    'NamedNodeMap',
    'Node',
    'NodeFilter',
    'Text',
    'TreeWalker',
    'Window',
]